syntax = "proto3";

package user.v1;


// User message definition
message User {
    string id = 1;
    string username = 2;
    string password = 3;
    string role_id = 4;
    bool   is_admin=5;
    string created_at = 6;
    string updated_at = 7;
  }